syntax = "proto3";

package model;

option go_package = "/github.com/PhilippWegner/hsbo-ma-inf-wegner-philipp/microservice-architecture/grpc-logger-service/model";

message Log {
    string name = 1;
    string data = 2;
}

message LogRequest {
    Log logEntry = 1;
}

message LogResponse {
    string result = 1;
}

service LogService {
    rpc WriteLog(LogRequest) returns (LogResponse);
}